--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2024"
 [dependencies]
 nu-plugin = "0.109.1"
 nu-protocol = "0.109.1"
+syscalls = { version = "0.7.0", features = ["all"] }
 which = "8.0.0"
